--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -16,7 +16,7 @@
                 </div>
             </div>
             <a th:href="@{/user/ward}" class="text-blue-600" th:if="${access_requests != null}">
-                You have Access <span class="px-1.5 bg-red-600 rounded border-black border text-white" th:text="${access_requests.size}"></span> Request
+                You have Access <span class="px-1.5 bg-red-600 rounded-sm border-black border text-white" th:text="${access_requests.size}"></span> Request
             </a>
         </div>
     </div>
