--- a/src/main/resources/templates/user/meeting_add.html
+++ b/src/main/resources/templates/user/meeting_add.html
@@ -15,15 +15,15 @@
                 <div class="grid grid-cols-12 gap-4">
                     <div class="col-span-12 md:col-span-3">
                         <label for="title">Title</label>
-                        <input type="text" th:field="*{title}" name="title" id="title" class="block rounded" />
+                        <input type="text" th:field="*{title}" name="title" id="title" class="block rounded-sm" />
                     </div>
                     <div class="col-span-12 md:col-span-3">
                         <label for="subtitle">SubTitle</label>
-                        <input type="text" th:field="*{subtitle}" name="subtitle" id="subtitle" class="block rounded" />
+                        <input type="text" th:field="*{subtitle}" name="subtitle" id="subtitle" class="block rounded-sm" />
                     </div>
                     <div class="col-span-12 md:col-span-3">
                         <label for="description">Description</label>
-                        <input type="text" th:field="*{description}" name="description" id="description" class="block rounded" />
+                        <input type="text" th:field="*{description}" name="description" id="description" class="block rounded-sm" />
                     </div>
                     <div class="col-span-12">
                         <h5>Sunday's this meeting are on</h5>
