--- a/src/main/resources/templates/user/datacard_add.html
+++ b/src/main/resources/templates/user/datacard_add.html
@@ -18,15 +18,15 @@
                         <input type="hidden" name="wardPath" th:value="${user.ward.path}" />
 
                         <label for="title">Title</label>
-                        <input class="rounded block md:w-6/12 w-10/12" type="text" th:field="*{title}" id="title" />
+                        <input class="rounded-sm block md:w-6/12 w-10/12" type="text" th:field="*{title}" id="title" />
                     </div>
                     <div class="col-span-12">
                         <label for="subtitle">Subtitle</label>
-                        <input class="rounded block md:w-6/12 w-10/12" type="text" th:field="*{subtitle}" id="subtitle" />
+                        <input class="rounded-sm block md:w-6/12 w-10/12" type="text" th:field="*{subtitle}" id="subtitle" />
                     </div>
                     <div class="col-span-12">
                         <label for="paragraph">Paragraph</label>
-                        <textarea class="rounded block md:w-8/12 w-10/12 p-3" th:field="*{paragraph}" id="paragraph" />
+                        <textarea class="rounded-sm block md:w-8/12 w-10/12 p-3" th:field="*{paragraph}" id="paragraph" />
                     </div>
                 </div>
                 <div id="images" class="grid grid-cols-12 mt-4 pt-4 border-t border-black">
@@ -38,7 +38,7 @@
                     </div>
                     <div class="col-span-12 md:col-span-2"><p class="text-blue-500 copy-url hidden">URL Copied!</p></div>
                     <div class="col-span-12 md:col-span-7">
-                        <select id="image-src" class="form-select rounded" th:with="wardPath=${user.ward.path}">
+                        <select id="image-src" class="form-select rounded-sm" th:with="wardPath=${user.ward.path}">
                             <option value="">Copy image URL from uploaded images</option>
                             <option th:each="i : ${files}"
                                     th:text="${i.name}"
@@ -49,35 +49,35 @@
                     <div class="col-span-12 images-set flex flex-row gap-3 flex-wrap md:flex-nowrap" th:each="img, i : ${datacard.images}" th:data-item-id="${'image'+i.index}">
                         <div class="basis-full md:basis-5/12">
                             <label th:for="${'images['+i.index+'].src'}">SRC</label>
-                            <input class="rounded block w-full" type="text"
+                            <input class="rounded-sm block w-full" type="text"
                                    th:name="${'images['+i.index+'].src'}"
                                    th:value="${img.src}"
                                    th:id="${'images['+i.index+'].src'}" placeholder="i.e. /path/to/your/image.png"/>
                         </div>
                         <div class="basis-full md:basis-3/12">
                             <label th:for="${'images['+i.index+'].alt'}">Alt Text</label>
-                            <input class="rounded block w-full" type="text"
+                            <input class="rounded-sm block w-full" type="text"
                                    th:name="${'images['+i.index+'].alt'}"
                                    th:value="${img.alt}"
                                    th:id="${'images['+i.index+'].alt'}" />
                         </div>
                         <div class="basis-full md:basis-2/12">
                             <label th:for="${'images['+i.index+'].width'}">Width</label>
-                            <input class="rounded block w-full" type="text"
+                            <input class="rounded-sm block w-full" type="text"
                                    th:name="${'images['+i.index+'].width'}"
                                    th:value="${img.width}"
                                    th:id="${'images['+i.index+'].width'}" />
                         </div>
                         <div class="basis-full md:basis-2/12">
                             <label th:for="${'images['+i.index+'].height'}">Height</label>
-                            <input class="rounded block w-full" type="text"
+                            <input class="rounded-sm block w-full" type="text"
                                    th:name="${'images['+i.index+'].height'}"
                                    th:value="${img.height}"
                                    th:id="${'images['+i.index+'].height'}" />
                         </div>
                         <div class="basis-full md:basis-1/12 flex self-end">
                             <div th:class="${i.index > 0 ? 'float-right' : 'hidden'}">
-                                <button type="button" class="delete_item bg-red-600 py-1 px-2 rounded-full" th:data-item-target="${'image'+i.index}" data-target-set=".images-set">
+                                <button type="button" class="delete_item bg-red-600 py-1 px-2 rounded-sm" th:data-item-target="${'image'+i.index}" data-target-set=".images-set">
                                     <i class="fa-solid text-xl fa-trash-can text-white"></i>
                                 </button>
                             </div>
@@ -96,12 +96,12 @@
                     <div id="links" class="col-span-12 grid grid-cols-12">
                         <div class="col-span-12">
                             <label for="button.text">Text</label>
-                            <input class="rounded block md:w-5/12 w-10/12" type="text" th:field="*{button.text}" id="button.text" />
+                            <input class="rounded-sm block md:w-5/12 w-10/12" type="text" th:field="*{button.text}" id="button.text" />
                         </div>
                         <div class="col-span-12 link-set flex flex-row gap-3 flex-wrap md:flex-nowrap" th:each="link, i : ${datacard.button.link}" th:data-item-id="${'link'+i.index}">
                             <div class="basis-full md:basis-5/12">
                                 <label th:for="${'button.link['+ i.index +'].url'}">URL</label>
-                                <input class="rounded block w-full" type="text"
+                                <input class="rounded-sm block w-full" type="text"
                                        th:name="${'button.link['+ i.index +'].url'}"
                                        th:value="${link.url}"
                                        th:id="${'button.link['+ i.index +'].url'}" />
@@ -129,7 +129,7 @@
                                    th:id="${'button.link['+ i.index +'].external'}" />
                                 <label  th:for="${'button.link['+ i.index +'].external'}">External</label>
                                 <div th:class="${i.index > 0 ? 'float-right' : 'hidden'}">
-                                    <button type="button" class="delete_item bg-red-600 py-1 px-2 rounded-full" th:data-item-target="${'link'+i.index}" data-target-set=".link-set">
+                                    <button type="button" class="delete_item bg-red-600 py-1 px-2 rounded-sm" th:data-item-target="${'link'+i.index}" data-target-set=".link-set">
                                         <i class="fa-solid text-xl fa-trash-can text-white"></i>
                                     </button>
                                 </div>
