--- a/src/main/resources/templates/user/datacard_order.html
+++ b/src/main/resources/templates/user/datacard_order.html
@@ -10,7 +10,7 @@
         <div class="col-span-12">
             <h3 class="font-bold text-3xl my-4">Data Card Order</h3>
             <form th:action="@{/user/datacard/order/{type}/save(type=${cardType})}" method="post">
-                <div class="grid grid-cols-12 w-full md:w-1/2 bg-amber-100 p-2 rounded-t border border-amber-300">
+                <div class="grid grid-cols-12 w-full md:w-1/2 bg-amber-100 p-2 rounded-t-sm border border-amber-300">
                     <div class="col-span-6">Card Name</div>
                     <div class="col-span-6">Card Order</div>
                 </div>
@@ -40,13 +40,13 @@
                         </th:block>
                         <input type="hidden" th:name="${'datacards['+i.index+'].type'}" th:value="${d.type}" />
                         <input type="hidden" th:name="${'datacards['+i.index+'].active'}" th:value="${d.active}" />
-                        <select class="form-select rounded" th:name="${'datacards['+i.index+'].order'}">
+                        <select class="form-select rounded-sm" th:name="${'datacards['+i.index+'].order'}">
                             <option th:each="o, i: ${cardNumbers}" th:selected="${d.order == o}" th:text="${o}"></option>
                         </select>
 
                     </div>
                 </div>
-                <button type="submit" class="border border-amber-400 bg-amber-200 py-1 px-2 my-2 rounded">Save</button>
+                <button type="submit" class="border border-amber-400 bg-amber-200 py-1 px-2 my-2 rounded-sm">Save</button>
             </form>
         </div>
     </div>
